# capsule-bot

./: .gitignore  Cargo.toml
package/: Move.toml
package/sources/: capsule_baby.move  market.move
rusty_bot/: Cargo.toml
rusty_bot/src/: bot.rs  client.rs  config.rs  main.rs
rusty_bot/src/strategy/: mod.rs  package.rs
