[package]
name = "capsule-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ['full'] }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "devnet-0.31.0" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "devnet-0.31.0" }
serde_json = "1.0.96"
anyhow = "1.0.70"
serde = "1.0.160"
